@@ -14,10 +14,10 @@ import java.util.List;
 
 public class HighlightTrick extends Trick<HighlightTrick> {
     public HighlightTrick() {
-        super(Pattern.of(2, 0, 1, 2, 3, 4, 5, 8, 7, 6, 3), Signature.of(variadic(FragmentType.VECTOR).require().unpack(), HighlightTrick::run));
+        super(Pattern.of(2, 0, 1, 2, 3, 4, 5, 8, 7, 6, 3), Signature.of(variadic(FragmentType.VECTOR).require().unpack(), HighlightTrick::run, FragmentType.VECTOR));
     }
 
-    public Fragment run(SpellContext ctx, List<VectorFragment> positions) throws BlunderException {
+    public VectorFragment run(SpellContext ctx, List<VectorFragment> positions) throws BlunderException {
         for (var pos : positions) {
             var block = pos.toBlockPos().toCenterPos();
             ctx.source().getWorld().spawnParticles(
@@ -26,6 +26,6 @@ public class HighlightTrick extends Trick<HighlightTrick> {
             );
         }
 
-        return positions.get(0);
+        return positions.getFirst();
     }
 }
